Re-Connect
Added option to reconnect from in app after failing the first time
without app restart